fix(ui): dimensions & overflows

--- a/apps/dapp/src/styles/globals.css
+++ b/apps/dapp/src/styles/globals.css
@@ -131,6 +131,10 @@
     @apply border-border outline-ring/50;
   }
 
+  html {
+    @apply overflow-hidden
+  }
+
   body {
     @apply bg-background text-foreground;
   }
